Fixing add footnote form spacing for reports.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -5393,7 +5393,9 @@ section#comment-form form {
   padding: 0;
 }
 section#comment-form form .form-actions {
-  padding-bottom: 0;
+  padding: 0;
+  margin: 0;
+  border: 0 none;
 }
 section#comment-form form .form-actions input {
   font-size: 16px;
